# oneg4fm

./: .gitignore  CHANGELOG  CMakeLists.txt  DESIGN.md  HACKING.md  README.md  TODO.md  TODO2.md  check_usage.py  ctags.funcs.json  debug_script.py  hex.md
cmake/: config.h.in
config/: CMakeLists.txt
config/oneg4fm/default/: settings.conf.in
docs/: conversion-status.md  libfm-usage-analysis.md  remaining-conversion-work.md
libfm/: CMakeLists.txt
libfm-qt/: CMakeLists.txt
libfm-qt/data/: archivers.list
libfm-qt/src/: CMakeLists.txt  app-chooser-dialog.ui  appchooserdialog.cpp  browsehistory.cpp  filedialoghelper.cpp  filelauncher.cpp  filepropsdialog.cpp  folderitemdelegate.cpp  folderview.cpp  folderview.h  libfm-qt.pc.in  libfmqt.cpp  mountoperation.cpp  mountoperationpassworddialog.cpp  pathbar.cpp  pathbar.h  renamedialog.cpp  renamedialog.h  utilities.cpp  xdndworkaround.h
libfm-qt/src/core/: fileinfo.cpp  filepath.h  thumbnailer.cpp
libfm-qt/src/core/legacy/: fm-app-info.c  glib-compat.h
libfm-qt/src/core/vfs/: vfs-search.c
libfm-qt/src/tests/: test-filedialog.cpp  test-folder.cpp  test-folderview.cpp  test-placesview.cpp  test-volumemanager.cpp
pcmanfm/: CMakeLists.txt  about.ui  application.cpp  application.h  autorundialog.cpp  autorundialog.h  bulkrename.cpp  connectserverdialog.cpp  imagemagick_qt.cpp  imagemagick_support.cpp  launcher.cpp  launcher.h  main-win.ui  mainwindow.cpp  mainwindow.h  mainwindow_bookmarks.cpp  mainwindow_dragdrop.cpp  mainwindow_events.cpp  mainwindow_fileops.cpp  mainwindow_menus.cpp  mainwindow_navigation.cpp  mainwindow_tabs.cpp  mainwindow_view.cpp  mainwindow_viewframe.cpp  oneg4fm.desktop.in  pcmanfm-qt.desktop.in  pcmanfm.cpp  preferences.ui  preferencesdialog.cpp  preferencesdialog.h  settings.cpp  settings.h  statusbar.cpp  tabbar.cpp  tabbar.h  tabpage.cpp  tabpage.h  view.cpp  view.h  xdgdir.cpp  (+1 more)
src/backends/gio/: gio_remotebackend.cpp  gio_remotebackend.h  gio_trashbackend.cpp  gio_trashbackend.h  gio_volumebackend.h
src/backends/qt/: qt_fileinfo.cpp  qt_fileinfo.h  qt_fileops.cpp  qt_fileops.h  qt_foldermodel.cpp  qt_foldermodel.h
src/core/: archive_extract.cpp  archive_writer.cpp  archive_writer.h  backend_registry.cpp  backend_registry.h  fs_ops.cpp  fs_ops.h  ifileinfo.h  ifileops.cpp  ifileops.h  ifoldermodel.h  iremotebackend.h  itrashbackend.h  ivolumebackend.h
src/ui/: archiveextractjob.cpp  archiveextractjob.h  archivejob.cpp  archivejob.h  binarydocument.cpp  binarydocument.h  color_delegate.cpp  color_delegate.h  color_manager.cpp  color_manager.h  color_roles.h  disasm_engine.cpp  disasm_engine.h  disasmmodel.cpp  disasmmodel.h  disassemblywindow.cpp  disassemblywindow.h  filepropertiesdialog.cpp  filepropertiesdialog.h  fsqt.cpp  fsqt.h  hexdocument.cpp  hexdocument.h  hexeditorview.cpp  hexeditorview.h  hexeditorwindow.cpp  hexeditorwindow.h  visual_style.h
tests/: CMakeLists.txt  archive_extract_test.cpp  fs_ops_test.cpp  qt_fileops_test.cpp  test_basic.cpp  test_browsehistory.cpp  test_core_utils.cpp  test_imagemagick.cpp  test_settings.cpp  test_settings_functionality.cpp  test_thumbnailer.cpp  test_utils.cpp  test_xdgdir.cpp  test_xdgdir_functionality.cpp
